Fix input textareas getting too big

--- a/src/index.less
+++ b/src/index.less
@@ -37,6 +37,7 @@ code, pre, textarea {
 
 textarea {
   width: 100%;
+  max-height: 60vh;
 
   border: 1px solid darkgray;
   border-radius: 4px;
